2007-01-03  Tim Waugh  <twaugh@redhat.com>

	* Makefile: Version 1.9.17.

2007-01-03  Tim Waugh  <twaugh@redhat.com>

	* cupsppd.c (ppd_encoding_is_utf8): Handle there being no known
	encoding for the PPD file (bug #220136).

2006-12-15  Tim Waugh  <twaugh@redhat.com>

	* cupsppd.c (PPD_localize): New method.

2006-12-07  Tim Waugh  <twaugh@redhat.com>

	* Makefile: Version 1.9.16.

2006-12-07  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_getPrinters): Include
	printer-state-reasons attribute.

2006-11-30  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_getPrinters): Include
	printer-state-message attribute.
	(do_printer_request): Set printer-state-message if reason given.
	(Connection_methods): Updated help strings.
	(Connection_adminSetServerSettings): Fixed small memory leak.
	(Connection_init): More debug.
	(Connection_dealloc): Likewise.
	(do_printer_request): Likewise.
	(Connection_getDests): Likewise.
	(Connection_getPrinters): Likewise.
	(set_http_error): Likewise.
	(set_ipp_error): Likewise.
	(build_list_from_attribute_strings): Likewise.
	(Connection_getClasses): Likewise.
	(Connection_getPPDs): Likewise.
	(Connection_getDevices): Likewise.
	(Connection_getJobs): Likewise.
	(Connection_getFile): Likewise.
	(Connection_putFile): Likewise.

2006-11-29  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_getJobs): Include job-priority
	attribute.

2006-11-10  Tim Waugh  <twaugh@redhat.com>

	* Makefile: Version 1.9.15.

2006-11-10  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_getJobs): New method.
	(Connection_cancelJob): New method.

2006-11-02  Tim Waugh  <twaugh@redhat.com>

	* Makefile: Version 1.9.14.

2006-11-02  Tim Waugh  <twaugh@redhat.com>

	* cupsppd.c (Option_getChoices): Handle enum values already set
	outside the range (bug #213136).

2006-10-24  Tim Waugh  <twaugh@redhat.com>

	* cupsmodule.h: Removed bit-rotten CUPS 1.1.x compatibility code.
